[gd_scene load_steps=7 format=3 uid="uid://q8i4rhigp7s1"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_l3i6r"]
[ext_resource type="Texture2D" uid="uid://bdiequ3i6lg24" path="res://Assets/startbetaTest1.png" id="2_e1twl"]
[ext_resource type="Theme" uid="uid://80x520lkkcuc" path="res://main_menu_button.tres" id="3_m0vmb"]
[ext_resource type="FontFile" uid="uid://b4vlhabd0nxij" path="res://Assets/CHERI___.TTF" id="4_1hbn1"]
[ext_resource type="PackedScene" uid="uid://cmn230kak7r3m" path="res://Scenes/options_menu.tscn" id="4_46ud3"]
[ext_resource type="AudioStream" uid="uid://cckdgqsyvmdsm" path="res://Sounds/797899__freemusicstudio708__bouncybubblepop.mp3" id="6_bsnho"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l3i6r")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_e1twl")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 87.0
offset_top = 369.0
offset_right = 350.0
offset_bottom = 542.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_m0vmb")
theme_override_fonts/font = ExtResource("4_1hbn1")
theme_override_font_sizes/font_size = 30
text = "Start Game"

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_m0vmb")
theme_override_fonts/font = ExtResource("4_1hbn1")
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_m0vmb")
theme_override_fonts/font = ExtResource("4_1hbn1")
theme_override_font_sizes/font_size = 30
text = "Exit"

[node name="OptionsMenu" parent="." instance=ExtResource("4_46ud3")]
visible = false
layout_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_bsnho")

[node name="LoopTimer" type="Timer" parent="."]
wait_time = 214.13

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
